--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="main.css" rel="stylesheet">
+        <link href="./styles/normalize.css" rel="stylesheet">
+        <link href="./styles/main.css" rel="stylesheet">
     </head>
     <body>
         <main>
@@ -25,24 +26,28 @@
                     <input type="text" class="query">
                 </form>
                 <div class="btns">
-                    <button type="">Google Search</button>
-                    <button type="">I'm feeling lucky</button>
+                    <button class="btn">Google Search</button>
+                    <button class="btn">I'm feeling lucky</button>
                 </div>
-                <p>Google offered in: Hausa Ijaw Itsekiri Urhobo Igbo</p>
+                <p>Google offered in: &nbsp; &nbsp; &nbsp; <span class="links">Hausa &nbsp; Ijaw &nbsp; Itsekiri &nbsp; Urhobo &nbsp; Igbo</span></p>
             </section>
         </main>
         <footer>
-            <p>Nigeria</p>
+            <ul>
+                <li>Nigeria</li>    
+            </ul>
         </footer>
-            
-        <footer>
-            <p>Advertising</p>
-            <p>Business</p>
-            <p>About</p>
-            <p>Privacy</p>
-            <p>Terms</p>
-            <p>Settings</p>
+        <footer id="bottomFooter">
+        <ul>
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>About</li>
+        </ul>
+        <ul>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Settings</li>
+        </ul>
         </footer>
-    
     </body>
 </html>
