--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./images/google-logo.jpg" class="google-logo" alt="">
                 </div>
                 <form>
-                    <input type="text" class="query">
+                    <input type="text" class="query" autofocus>
                 </form>
                 <div class="btns">
                     <button class="btn">Google Search</button>
@@ -38,12 +38,12 @@
             </ul>
         </footer>
         <footer id="bottomFooter">
-        <ul>
+        <ul id="left">
             <li>Advertising</li>
             <li>Business</li>
             <li>About</li>
         </ul>
-        <ul>
+        <ul id="right">
             <li>Privacy</li>
             <li>Terms</li>
             <li>Settings</li>
